import { RaidBuffs } from '/tbc/core/proto/common.js';
import { PartyBuffs } from '/tbc/core/proto/common.js';
import { IndividualBuffs } from '/tbc/core/proto/common.js';
import { Debuffs } from '/tbc/core/proto/common.js';
import { Stat } from '/tbc/core/proto/common.js';
import { TristateEffect } from '/tbc/core/proto/common.js';
import { Stats } from '/tbc/core/proto_utils/stats.js';
import { IndividualSimUI } from '/tbc/core/individual_sim_ui.js';
import { Alchohol } from '/tbc/core/proto/common.js';
import { BattleElixir } from '/tbc/core/proto/common.js';
import { Flask } from '/tbc/core/proto/common.js';
import { Food } from '/tbc/core/proto/common.js';
import { GuardianElixir } from '/tbc/core/proto/common.js';
import { Conjured } from '/tbc/core/proto/common.js';
import { Drums } from '/tbc/core/proto/common.js';
import { Potions } from '/tbc/core/proto/common.js';
import { WeaponImbue } from '/tbc/core/proto/common.js';
import * as IconInputs from '/tbc/core/components/icon_inputs.js';
import * as OtherInputs from '/tbc/core/components/other_inputs.js';
import * as Mechanics from '/tbc/core/constants/mechanics.js';
import * as SmitePriestInputs from './inputs.js';
import * as Presets from './presets.js';
export class SmitePriestSimUI extends IndividualSimUI {
    constructor(parentElem, player) {
        super(parentElem, player, {
            cssClass: 'smite-priest-sim-ui',
            // List any known bugs / issues here and they'll be shown on the site.
            knownIssues: [],
            // All stats for which EP should be calculated.
            epStats: [
                Stat.StatIntellect,
                Stat.StatSpirit,
                Stat.StatSpellPower,
                Stat.StatSpellHit,
                Stat.StatSpellCrit,
                Stat.StatSpellHaste,
                Stat.StatMP5,
            ],
            // Reference stat against which to calculate EP. I think all classes use either spell power or attack power.
            epReferenceStat: Stat.StatSpellPower,
            // Which stats to display in the Character Stats section, at the bottom of the left-hand sidebar.
            displayStats: [
                Stat.StatHealth,
                Stat.StatStamina,
                Stat.StatIntellect,
                Stat.StatSpirit,
                Stat.StatSpellPower,
                Stat.StatShadowSpellPower,
                Stat.StatHolySpellPower,
                Stat.StatSpellHit,
                Stat.StatSpellCrit,
                Stat.StatSpellHaste,
                Stat.StatMP5,
            ],
            modifyDisplayStats: (player) => {
                let stats = new Stats();
                stats = stats.addStat(Stat.StatSpellHit, player.getTalents().shadowFocus * 2 * Mechanics.SPELL_HIT_RATING_PER_HIT_CHANCE +
                    player.getTalents().focusedPower * 2 * Mechanics.SPELL_HIT_RATING_PER_HIT_CHANCE);
                return {
                    talents: stats,
                };
            },
            defaults: {
                // Default equipped gear.
                gear: Presets.P1_PRESET.gear,
                // Default EP weights for sorting gear in the gear picker.
                epWeights: Stats.fromMap({
                    [Stat.StatIntellect]: 1.38,
                    [Stat.StatSpirit]: 1.18,
                    [Stat.StatSpellPower]: 1,
                    [Stat.StatSpellHit]: 2.57,
                    [Stat.StatShadowSpellPower]: 0.05,
                    [Stat.StatHolySpellPower]: 0.95,
                    [Stat.StatSpellCrit]: 0.44,
                    [Stat.StatSpellHaste]: 0.28,
                    [Stat.StatMP5]: 2.05,
                }),
                // Default consumes settings.
                consumes: Presets.DefaultConsumes,
                // Default rotation settings.
                rotation: Presets.DefaultRotation,
                // Default talents.
                talents: Presets.StandardTalents.data,
                // Default spec-specific settings.
                specOptions: Presets.DefaultOptions,
                // Default raid/party buffs settings.
                raidBuffs: RaidBuffs.create({
                    arcaneBrilliance: true,
                    divineSpirit: TristateEffect.TristateEffectImproved,
                    giftOfTheWild: TristateEffect.TristateEffectImproved,
                }),
                partyBuffs: PartyBuffs.create({
                    drums: Drums.DrumsOfBattle,
                    bloodlust: 1,
                    manaSpringTotem: TristateEffect.TristateEffectRegular,
                    wrathOfAirTotem: TristateEffect.TristateEffectRegular,
                    sanctityAura: TristateEffect.TristateEffectImproved,
                }),
                individualBuffs: IndividualBuffs.create({
                    blessingOfKings: true,
                    blessingOfWisdom: 2,
                    blessingOfSalvation: true,
                }),
                debuffs: Debuffs.create({
                    judgementOfWisdom: true,
                    misery: true,
                    improvedSealOfTheCrusader: true,
                    curseOfElements: TristateEffect.TristateEffectRegular,
                }),
            },
            // IconInputs to include in the 'Self Buffs' section on the settings tab.
            selfBuffInputs: [
                SmitePriestInputs.SelfPowerInfusion,
            ],
            // IconInputs to include in the 'Other Buffs' section on the settings tab.
            raidBuffInputs: [
                IconInputs.ArcaneBrilliance,
                IconInputs.DivineSpirit,
                IconInputs.GiftOfTheWild,
            ],
            partyBuffInputs: [
                IconInputs.MoonkinAura,
                IconInputs.DrumsOfBattleBuff,
                IconInputs.DrumsOfRestorationBuff,
                IconInputs.Bloodlust,
                IconInputs.WrathOfAirTotem,
                IconInputs.TotemOfWrath,
                IconInputs.ManaSpringTotem,
                IconInputs.ManaTideTotem,
                IconInputs.DraeneiRacialCaster,
                IconInputs.EyeOfTheNight,
                IconInputs.ChainOfTheTwilightOwl,
                IconInputs.JadePendantOfBlasting,
                IconInputs.AtieshWarlock,
                IconInputs.AtieshMage,
                IconInputs.SanctityAura,
            ],
            playerBuffInputs: [
                IconInputs.BlessingOfKings,
                IconInputs.BlessingOfWisdom,
                IconInputs.BlessingOfSalvation,
                IconInputs.Innervate,
                IconInputs.PowerInfusion,
            ],
            // IconInputs to include in the 'Debuffs' section on the settings tab.
            debuffInputs: [
                IconInputs.JudgementOfWisdom,
                IconInputs.ImprovedSealOfTheCrusader,
                IconInputs.CurseOfElements,
                IconInputs.Misery,
            ],
            // Which options are selectable in the 'Consumes' section.
            consumeOptions: {
                potions: [
                    Potions.SuperManaPotion,
                    Potions.DestructionPotion,
                ],
                conjured: [
                    Conjured.ConjuredDarkRune,
                ],
                flasks: [
                    Flask.FlaskOfBlindingLight,
                    Flask.FlaskOfPureDeath,
                    Flask.FlaskOfSupremePower,
                ],
                battleElixirs: [
                    BattleElixir.AdeptsElixir,
                ],
                guardianElixirs: [
                    GuardianElixir.ElixirOfDraenicWisdom,
                    GuardianElixir.ElixirOfMajorMageblood,
                ],
                food: [
                    Food.FoodBlackenedBasilisk,
                    Food.FoodSkullfishSoup,
                ],
                alcohol: [
                    Alchohol.AlchoholKreegsStoutBeatdown,
                ],
                weaponImbues: [
                    WeaponImbue.WeaponImbueBrilliantWizardOil,
                    WeaponImbue.WeaponImbueSuperiorWizardOil,
                ],
                other: [],
            },
            // Inputs to include in the 'Rotation' section on the settings tab.
            rotationInputs: SmitePriestInputs.SmitePriestRotationConfig,
            // Inputs to include in the 'Other' section on the settings tab.
            otherInputs: {
                inputs: [
                    OtherInputs.ISBUptime,
                    OtherInputs.ShadowPriestDPS,
                    OtherInputs.StartingPotion,
                    OtherInputs.NumStartingPotions,
                    OtherInputs.SnapshotImprovedWrathOfAirTotem,
                    OtherInputs.TankAssignment,
                ],
            },
            encounterPicker: {
                // Target stats to show for 'Simple' encounters.
                simpleTargetStats: [],
                // Whether to include 'Execute Duration (%)' in the 'Encounter' section of the settings tab.
                showExecuteProportion: false,
            },
            // If true, the talents on the talents tab will not be individually modifiable by the user.
            // Note that the use can still pick between preset talents, if there is more than 1.
            freezeTalents: false,
            presets: {
                // Preset talents that the user can quickly select.
                talents: [
                    Presets.StandardTalents,
                ],
                // Preset gear configurations that the user can quickly select.
                gear: [
                    Presets.P1_PRESET,
                    Presets.P2_PRESET,
                    Presets.P3_PRESET,
                    Presets.P4_PRESET,
                    Presets.P5_PRESET,
                ],
            },
        });
    }
}
